deploy/headless-rest2grpc-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
  name: grpc-server
  namespace: demo
spec:
  ports:
  - name: http-9898-9898
    port: 9898
    protocol: TCP
    appProtocol: grpc
    targetPort: 9898
  selector:
    app: rest-grpc-server
  clusterIP: None
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
