deploy/rest2grpc-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: rest-grpc-client
  namespace: demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rest-grpc-client
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
      labels:
        app: rest-grpc-client
    spec:
      containers:
      - image: keveinliu/rest2grpc-client:0.0.2
        imagePullPolicy: IfNotPresent
        name: rest2grpc-client
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
  name: rest2grpc-client
  namespace: demo
spec:
  ports:
  - name: http-8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rest-grpc-client
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
