deploy/rest2grpc-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: rest-grpc-server
  namespace: demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rest-grpc-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
      labels:
        app: rest-grpc-server
    spec:
      containers:
      - image: keveinliu/rest2grpc-server:0.0.2
        imagePullPolicy: IfNotPresent
        name: rest2grpc-server
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
  name: rest2grpc-service
  namespace: demo
spec:
  ports:
  - name: http-9898-9898
    port: 9898
    protocol: TCP
    appProtocol: grpc
    targetPort: 9898
  selector:
    app: rest-grpc-server
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
