deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-client
  namespace: demo
  annotations:
    pipy.ingress.kubernetes.io/rewrite-target-from: ^/grpc/?
    pipy.ingress.kubernetes.io/rewrite-target-to: /
spec:
  ingressClassName: pipy
  rules:
  - http:
      paths:
      - path: /grpc/*
        pathType: Prefix
        backend:
          service:
            name: rest2grpc-client
            port:
              number: 8080
